# Magical-conch

./: CMakeLists.txt  README.md
include/: ggwave.h
src/: ggwave-common-sdl2.cpp  ggwave-common.cpp  ggwave.cpp  main.cpp
